:truck: Reorganize node types

--- a/plugins/csl-node-editor/gui/css/csl-node-editor.css
+++ b/plugins/csl-node-editor/gui/css/csl-node-editor.css
@@ -201,7 +201,7 @@ body {
     background-color: var(--cs-color-background-dark) !important;
     padding: 0 !important;
     border-radius: 5px;
-    width: auto !important;
+    width: max-content !important;
 }
 
 .context-menu .search,
